Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanIntegerField.quorum
class Main
    boolean bool = false
    action Main
        bool = cast(boolean, 5)
    end
end